# pwlreg

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: constraints.txt  docs.yml  release-drafter.yml  release.yml  tests.yml
docs/: index.md  quickstart.ipynb  reference.md
notebooks/: howto.ipynb  pw.ipynb  scratch.ipynb
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/pwlreg/: __init__.py  pwlreg.py
src/pwlreg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pwlreg.py
