[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pwlreg"
version = "0.2.0"
description = "A scikit-learn-compatible implementation of Piecewise Linear Regression"
authors = ["John Ensley <jensley@resource-innovations.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ensley-nexant/pwlreg"
repository = "https://github.com/ensley-nexant/pwlreg"
documentation = "https://ensley-nexant.github.io/pwlreg"
keywords = ["piecewise regression", "scikit-learn", "sklearn", "change point"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
scikit-learn = "^1.2.0"
scipy = "^1.9.3"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = {extras = ["toml"], version = "^7.0.1"}


[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.21.0"
pre-commit-hooks = "^4.4.0"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mknotebooks = "^0.7.1"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-autorefs = "^0.4.1"
pygments = "^2.13.0"
jupyter = "^1.0.0"
mkdocs-click = "^0.8.0"
black = "^22.12.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pwlreg"]

[tool.coverage.report]
show_missing = true
